<?xml version="1.0"?>
<package format="2">
  <name>adma_tools_py</name>
  <version>0.0.0</version>
  <description>The adma_tools package</description>

  <maintainer email="rico.schillings@hs-offenburg.de">Rico Schillings</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <depend>adma_ros_driver_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
